Revert "Update NodeBlock.Engine.csproj"
This reverts commit e8ba72c12931e163cb46724478251fe7b1f5f90b.

--- a/NodeBlock.Engine.csproj
+++ b/NodeBlock.Engine.csproj
@@ -42,7 +42,7 @@
    </ItemGroup>
   
    <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="'$(OS)' == 'Windows'">
-	   <Exec Condition=" '$(OS)' != 'Unix' " Command="copy /Y &quot;$(TargetDir)$(ProjectName).dll&quot; &quot;$(SolutionDir)\GraphLinq.CLI\bin\Debug\net6.0\plugins&quot;" />
+	   <Exec Condition=" '$(OS)' != 'Unix' " Command="copy /Y &quot;$(TargetDir)$(ProjectName).dll&quot; &quot;$(SolutionDir)\GraphLinq.CLI\bin\Debug\netcoreapp3.1\plugins&quot;" />
    </Target>
 
 </Project>
